# pax-pal-2026

./: .gitignore  CLAUDE.md  README.md  biome.json  bunfig.toml  justfile  lefthook.yml  package.json  setup.test.ts  sst.config.ts  tsconfig.json
.claude/: settings.json
.claude/agents/: dev.md
.claude/skills/post-setup/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
.sst/platform/: package.json
apps/www/: instrumentation-client.ts  package.json
apps/www/app/: apple-icon.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
apps/www/components/: action-bar.tsx  bottom-nav.tsx  chat-page.tsx  game-card.tsx  game-catalogue.tsx  game-detail-client.tsx  game-image.tsx  home-progress.tsx  media-gallery.tsx  my-games.tsx  played-modal.tsx  press-links.tsx  profile-page.tsx  profile-sync-provider.tsx  recommended-games.tsx  report-modal.tsx  reviews-section.tsx  search-page.tsx  tag-chip.tsx  theme-toggle.tsx  top-header.tsx  type-badge.tsx  username-modal.tsx
apps/www/hooks/: use-profile-sync.ts  use-tracking.ts  use-user.ts
apps/www/lib/: ai.ts  chat-storage.ts  db.ts  format-booth.ts  game-card-data.ts  recovery-words.ts  sort-booth.ts  tracking.ts  user.ts  vectors.ts
infra/: database.ts  frontend.ts  rum.ts  secrets.ts  tsconfig.json  vectors.ts
miscellaneous/data/01-scraped/: demos.json  exhibitors.json  (+1 more)
miscellaneous/demos/: stage-2-data-pipeline.md
miscellaneous/html/: sample-demos.html  sample-expo-hall-exhibitors.html  sample-tabletop-exhibitors.html
miscellaneous/python/: explore_taxonomy.py  pyproject.toml
scripts/: wipe-social-data.ts
(+78 files in other folders)
