[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.60",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "pickleshare>=0.7.5",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
]
